feat: add advanced redirect intelligence
